--- a/src/index.pug
+++ b/src/index.pug
@@ -6,5 +6,4 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         title Document
     body
-        h1 test pug
-        include button.pug
+        include header.pug
