добавила шрифты, начала верстать футер

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -6,4 +6,7 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         title Document
     body
-        include header.pug
+        div.header__container
+            include header.pug
+        div.footer__container
+            include footer.pug
