--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -2,6 +2,9 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    padding: 0 140px;
+    margin: 0 auto;
+    background-color: #ffffff;
 }
 
 .main-header-logo{
