--- a/src/pug/footer.pug
+++ b/src/pug/footer.pug
@@ -1,42 +1,42 @@
 .main-footer__container
     .main-footer__about-us
-        img.main-header-logo(src=require("../img/toxin.png"))
-        p.
+        img.main-footer-logo(src=require("../img/logo.svg"))
+        p.main-footer__text.
             Lorem ipsum dolor sit amet 
             consectetur adipiscing elit 
             aliquam eget nullam pellentesque 
             aliquam curabitur cociis.
-    ul.main-footer__list
-        li.main-footer__item 
-            ul.main-footer__item-list
-                li.main-footer__header Navigation
-                li.main-footer__data About Us
-                li.main-footer__data News
-                li.main-footer__data Support
-                li.main-footer__data Products
-        li.main-footer__item
-            ul.main-footer__item-list
-                li.main-footer__header About Us
-                li.main-footer__data Who we are
-                li.main-footer__data Our team
-                li.main-footer__data Careers
-                li.main-footer__data Investors
-        li.main-footer__item
-            ul.main-footer__item-list
-                li.main-footer__header Support
-                li.main-footer__data Documentation
-                li.main-footer__data Community
-                li.main-footer__data Get in touch
+
+    ul.main-footer__item-list
+        li.main-footer__header Navigation
+        li.main-footer__data About Us
+        li.main-footer__data News
+        li.main-footer__data Support
+        li.main-footer__data Products
+
+    ul.main-footer__item-list
+        li.main-footer__header About Us
+        li.main-footer__data Who we are
+        li.main-footer__data Our team
+        li.main-footer__data Careers
+        li.main-footer__data Investors
+
+    ul.main-footer__item-list
+        li.main-footer__header Support
+        li.main-footer__data Documentation
+        li.main-footer__data Community
+        li.main-footer__data Get in touch
     .main-footer__subscribe
         b.main-footer__subscribe-bold Subscribe to our newsletter
         p.main-footer__subscribe-paragraph  Receive our latest news and promotions in your inbox!
-
+        input(type="email")
 hr
-p Copyright © 2018 Toxin UI Kit. All rights reserved.
-ul.main-footer__socials-list
-    li.main-footer__socials-item.tw 
-        a(href="#", alt="twitter")
-    li.main-footer__socials-item.fb 
-        a(href="#", alt="facebook")
-    li.main-footer__socials-item.ig 
-        a(href="#", alt="instagram")
+.main-footer__copyright-container
+    p.main-footer__copyright-text Copyright © 2018 Toxin UI Kit. All rights reserved.
+    ul.main-footer__socials-list
+        li.main-footer__socials-item 
+            a.main-footer__socials-link(href="#", alt="twitter") 
+        li.main-footer__socials-item 
+            a.main-footer__socials-link(href="#", alt="facebook") 
+        li.main-footer__socials-item 
+            a.main-footer__socials-link(href="#", alt="instagram") 
