--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -2,8 +2,19 @@
     background-color: #fff;
     padding: 104px 140px 0px;
     display: flex;
-    display: row;
     align-items: flex-start;
+    font-size: 14px;
+    line-height: 24px;
+    justify-content: space-between;
+    margin-bottom: 100px;
+}
+.main-footer__text{
+    margin:0;
+    padding: 0;
+}
+
+.main-footer__logo{
+    margin-bottom: 30px;
 }
 
 .main-footer__about-us{
@@ -21,11 +32,16 @@
 
 .main-footer__header{
     font-weight: bold;
-    padding: 0 0 20px;
+    padding-bottom: 20px;
+    line-height: 17px;
+    text-transform: uppercase;
+    font-size: 12px;
 }
 
 .main-footer__data{
-
+    padding-bottom: 20px;
+    line-height: 17px;
+    color: rgba(31, 32, 65, 0.5);
 }
 
 .main-footer__item-list{
@@ -38,4 +54,43 @@
     list-style: none;
     margin: 0;
     padding: 0;
+
+    display: flex;
+
+}
+
+.main-footer__subscribe{
+    width: 260px;
+}
+
+.main-footer__subscribe-bold{
+    text-transform: uppercase;
+    font-size: 12px;
+}
+
+.main-footer__copyright-container{
+    padding: 0 140px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.main-footer__socials-link{
+    position: relative;
+    margin-left: 40px;
+}
+
+.main-footer__socials-link::before{
+    position: absolute;
+    content:"";
+    width: 24px;
+    height: 24px;
+    border: 2px solid #BC9CFF;
+    border-radius: 50%;
+    
+    top: 0;
+    left: -30px;
+}
+
+.main-footer__copyright-text{
+    font-size: 14px;
 }
