--- a/src/pug/footer.pug
+++ b/src/pug/footer.pug
@@ -1,6 +1,6 @@
 .main-footer__container
     .main-footer__about-us
-        img.main-footer-logo(src=require("../img/logo.svg"))
+        img.main-footer-logo(src=("./img/logo.png"))
         p.main-footer__text.
             Lorem ipsum dolor sit amet 
             consectetur adipiscing elit 
