--- a/src/pug/headersfooters.pug
+++ b/src/pug/headersfooters.pug
@@ -7,6 +7,8 @@ html(lang="en")
         title Document
     body
         div.header__container
-            include header.pug
+            include header-login.pug
+        div.header__container
+            include header-logged.pug
         div.footer__container
             include footer.pug
