--- a/src/scss/button.scss
+++ b/src/scss/button.scss
@@ -8,4 +8,9 @@
     font-size: 12px;
     border:0;
     font-family: 'Montserrat';
+    margin: 0 10px;
+}
+
+.button:active{
+    opacity: 0.5;
 }
