--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -2,14 +2,15 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
     padding: 0 140px;
     margin: 0 auto;
     background-color: #ffffff;
 }
 
 .main-header-logo{
-    height: 13px;
-    width: 53px;
+    height: 40px;
+    width: 105px;
 }
 
 .main-nav{
