сверстала нижний футер

--- a/src/pug/headersfooters.pug
+++ b/src/pug/headersfooters.pug
@@ -12,3 +12,5 @@ html(lang="en")
             include header-logged.pug
         div.footer__container
             include footer.pug
+        .footer-creative__container
+            include footer-creative.pug
