--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,7 @@
 @import "button.scss";
 @import "fonts.scss";
 @import "footer.scss";
+@import "footer-creative.scss";
 
 
 body{
@@ -20,5 +21,9 @@ body{
 .footer__container{
     margin-bottom: 40px;
     background-color: #fff;
+    width: 1440px;
+}
+
+.footer-creative__container{
     width: 1440px;
 }
