--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,7 @@
 @import "fonts.scss";
 @import "footer.scss";
 @import "footer-creative.scss";
+@import "colorsntype.scss";
 
 
 body{
@@ -11,6 +12,10 @@ body{
     flex-direction: column;
     background-color: #e5e5e5;
     align-items: center;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
 }
 
 .header__container{
@@ -26,4 +31,29 @@ body{
 
 .footer-creative__container{
     width: 1440px;
+}
+
+h1{
+    font-family: 'Quicksand';
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 30px;
+}
+
+h2{
+    font-family: 'Quicksand';
+    font-style: normal;
+    font-weight: bold;
+    font-size: 19px;
+    line-height: 24px;
+}
+
+h3{
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 15px;
+    text-transform: uppercase;
 }
