доверстала цвета и текст

--- a/src/pug/colorsntype.pug
+++ b/src/pug/colorsntype.pug
@@ -12,15 +12,15 @@ html(lang="en")
             
             .colorsntype-colors
                 ul.colorsntype-colors__list
-                    li.colorsntype-colors__item Dark Shade 100% <br><span>#1F2041</span>
-                    li.colorsntype-colors__item Dark Shade 75% <br><span>#1F2041</span>
-                    li.colorsntype-colors__item Dark Shade 50% <br><span>#1F2041</span>
-                    li.colorsntype-colors__item Dark Shade 25% <br><span>#1F2041</span>
-                    li.colorsntype-colors__item Dark Shade 5% <br><span>#1F2041</span>
-                    li.colorsntype-colors__item Purple <br><span>#BC9CFF</span>
-                    li.colorsntype-colors__item Green <br><span>#6FCF97</span>
+                    li.colorsntype-colors__item.colorsntype-colors__ds100 Dark Shade 100% <br><span>#1F2041</span>
+                    li.colorsntype-colors__item.colorsntype-colors__ds75 Dark Shade 75% <br><span>#1F2041</span>
+                    li.colorsntype-colors__item.colorsntype-colors__ds50 Dark Shade 50% <br><span>#1F2041</span>
+                    li.colorsntype-colors__item.colorsntype-colors__ds25 Dark Shade 25% <br><span>#1F2041</span>
+                    li.colorsntype-colors__item.colorsntype-colors__ds5 Dark Shade 5% <br><span>#1F2041</span>
+                    li.colorsntype-colors__item.colorsntype-colors__purple Purple <br><span>#BC9CFF</span>
+                    li.colorsntype-colors__item.colorsntype-colors__green Green <br><span>#6FCF97</span>
             .colorsntype-text
-                h1.colorsntype-text__h1 This one is the sub-section or widget title
-                h2.colorsntype-text__h2 Next one is the item title inside widgets
-                h3.colorsntype-text__h3 This is a label or CTA text
-                p.colorsntype-text__p This is the body text which is used for most of the design, like paragraphs, lists, etc.
+                h1.colorsntype-text__h1.colorsntype-text__item This one is the sub-section or widget title
+                h2.colorsntype-text__h2.colorsntype-text__item Next one is the item title inside widgets
+                h3.colorsntype-text__h3.colorsntype-text__item This is a label or CTA text
+                p.colorsntype-text__p.colorsntype-text__item This is the body text which is used for most of the design, like paragraphs, lists, etc.
