немного переписала цвета и типы

--- a/src/scss/colorsntype.scss
+++ b/src/scss/colorsntype.scss
@@ -66,6 +66,7 @@
 
 .colorsntype-text__h1{
     position: relative;
+    font-family: 'Quicksand';
 }
 
 .colorsntype-text__h1::before{
@@ -77,6 +78,7 @@
 
 .colorsntype-text__h2{
     position: relative;
+    font-family: 'Quicksand';
 }
 
 .colorsntype-text__h2::before{
