--- a/src/pug/colorsntype.pug
+++ b/src/pug/colorsntype.pug
@@ -12,13 +12,27 @@ html(lang="en")
             
             .colorsntype-colors
                 ul.colorsntype-colors__list
-                    li.colorsntype-colors__item.colorsntype-colors__ds100 Dark Shade 100% <br><span>#1F2041</span>
-                    li.colorsntype-colors__item.colorsntype-colors__ds75 Dark Shade 75% <br><span>#1F2041</span>
-                    li.colorsntype-colors__item.colorsntype-colors__ds50 Dark Shade 50% <br><span>#1F2041</span>
-                    li.colorsntype-colors__item.colorsntype-colors__ds25 Dark Shade 25% <br><span>#1F2041</span>
-                    li.colorsntype-colors__item.colorsntype-colors__ds5 Dark Shade 5% <br><span>#1F2041</span>
-                    li.colorsntype-colors__item.colorsntype-colors__purple Purple <br><span>#BC9CFF</span>
-                    li.colorsntype-colors__item.colorsntype-colors__green Green <br><span>#6FCF97</span>
+                    li.colorsntype-colors__item.colorsntype-colors__ds100 
+                        h2 Dark Shade 100%
+                        p #1F2041
+                    li.colorsntype-colors__item.colorsntype-colors__ds75 
+                        h2 Dark Shade 75% 
+                        p #1F2041
+                    li.colorsntype-colors__item.colorsntype-colors__ds50 
+                        h2 Dark Shade 50% 
+                        p #1F2041
+                    li.colorsntype-colors__item.colorsntype-colors__ds25 
+                        h2 Dark Shade 25% 
+                        p #1F2041
+                    li.colorsntype-colors__item.colorsntype-colors__ds5 
+                        h2 Dark Shade 5% 
+                        p #1F2041
+                    li.colorsntype-colors__item.colorsntype-colors__purple 
+                        h2 Purple 
+                        p #BC9CFF
+                    li.colorsntype-colors__item.colorsntype-colors__green 
+                        h2 Green 
+                        p #6FCF97
             .colorsntype-text
                 h1.colorsntype-text__h1.colorsntype-text__item This one is the sub-section or widget title
                 h2.colorsntype-text__h2.colorsntype-text__item Next one is the item title inside widgets
