--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -39,6 +39,8 @@ h1{
     font-weight: bold;
     font-size: 24px;
     line-height: 30px;
+    padding: 0;
+    margin: 0;
 }
 
 h2{
@@ -47,6 +49,8 @@ h2{
     font-weight: bold;
     font-size: 19px;
     line-height: 24px;
+    padding: 0;
+    margin: 0;
 }
 
 h3{
@@ -56,4 +60,6 @@ h3{
     font-size: 12px;
     line-height: 15px;
     text-transform: uppercase;
+    padding: 0;
+    margin: 0;
 }
