--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,6 +5,7 @@
 @import "footer-creative.scss";
 @import "colorsntype.scss";
 @import "formelements.scss";
+@import "vars.scss";
 
 
 body{
@@ -17,6 +18,7 @@ body{
     font-weight: normal;
     font-size: 14px;
     line-height: 24px;
+    color:  rgba(31, 32, 65, 0.75);
 }
 
 .header__container{
@@ -42,6 +44,7 @@ h1{
     line-height: 30px;
     padding: 0;
     margin: 0;
+    color: #1F2041;
 }
 
 h2{
@@ -52,6 +55,7 @@ h2{
     line-height: 24px;
     padding: 0;
     margin: 0;
+    color: #1F2041;
 }
 
 h3{
@@ -63,4 +67,16 @@ h3{
     text-transform: uppercase;
     padding: 0;
     margin: 0;
+    color: #1F2041;
+}
+
+h4{
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 18px;
+    padding: 0;
+    margin: 0;
+    color: #1F2041;
 }
