добавила ссылки на другие страницы

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,4 +8,6 @@ html(lang="en")
     body
       ul
         li
-          a(href="/colorsntype.html") Colors'n'Type
+          a(href="toxin/colorsntype.html") Colors'n'Type
+          a(href="toxin/formelements.html") Form Elements
+          a(href="toxin/headersfooters.html") Headers and Footers
