--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,8 +8,8 @@ html(lang="en")
     body
       ul
         li
-          a(href="toxin/colorsntype.html") Colors'n'Type
+          a(href="colorsntype.html") Colors'n'Type
         li
-          a(href="toxin/formelements.html") Form Elements
+          a(href="formelements.html") Form Elements
         li
-          a(href="toxin/headersfooters.html") Headers and Footers
+          a(href="headersfooters.html") Headers and Footers
