добавила ссылки на будущие страницы

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -6,6 +6,7 @@ html(lang="en")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     title Оглавление 
     body
+      h3 UX-Kit
       ul
         li
           a(href="colorsntype.html") Colors'n'Type
@@ -13,3 +14,14 @@ html(lang="en")
           a(href="formelements.html") Form Elements
         li
           a(href="headersfooters.html") Headers and Footers
+      h3 Website Pages
+      ul 
+        li
+        li
+        li
+        li
+        li
+        li
+        li
+        li
+        li
