создала файлы для будущих страниц

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -17,11 +17,13 @@ html(lang="en")
       h3 Website Pages
       ul 
         li
+          a(href="landingpage.html") Landing Page
         li
+          a(href="searchroom.html") Search Room
         li
+          a(href="roomdetails.html") Room Details
         li
+          a(href="registration.html") Registration
         li
-        li
-        li
-        li
-        li
+          a(href="signin.html") Sign In
+        
