собрала первую лэндинг страницу

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -14,6 +14,8 @@ html(lang="en")
           a(href="formelements.html") Form Elements
         li
           a(href="headersfooters.html") Headers and Footers
+        li 
+          a(href="cards.html") Cards
       h3 Website Pages
       ul 
         li
