--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -7,6 +7,7 @@
     line-height: 24px;
     justify-content: space-between;
     margin-bottom: 100px;
+    width: 1160px;
 }
 .main-footer__text{
     margin:0;
