--- a/src/pug/registration.pug
+++ b/src/pug/registration.pug
@@ -7,4 +7,5 @@ html(lang="en")
         title Registration
     body
         include header-login.pug
+        img(src="img/image2.jpg")
         include footer.pug
