--- a/src/pug/landingpage.pug
+++ b/src/pug/landingpage.pug
@@ -7,5 +7,9 @@ html(lang="en")
     title Landing Page
   body
     include header-login.pug
-    img.main-img(src="img/image.jpg")
+    .landing-page__image-container
+      img.main-img(src="img/image.jpg")
+      .landing-page__container
+        include findnumbercard.pug
+      p.landing-page__text Лучшие номера для вашей работы, отдыха и просто вдохновения
     include footer.pug
