--- a/src/pug/registration.pug
+++ b/src/pug/registration.pug
@@ -7,5 +7,10 @@ html(lang="en")
         title Registration
     body
         include header-login.pug
-        img(src="img/image2.jpg")
+        .header__container
+            img(src="img/image2.jpg") 
+            .header__container-registration
+                include registrationcard.pug
+            .header__container-signin
+                include signincard.pug   
         include footer.pug
