--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,3 +1,7 @@
+.main-footer__container-big{
+    background-color: #fff;
+}
+
 .main-footer__container{
     background-color: #fff;
     padding: 104px 140px 0px;
@@ -6,7 +10,6 @@
     font-size: 14px;
     line-height: 24px;
     justify-content: space-between;
-    margin-bottom: 100px;
     width: 1160px;
 }
 .main-footer__text{
@@ -73,6 +76,8 @@
     padding: 0 140px;
     display: flex;
     justify-content: space-between;
+    background-color: #fff;
+    width: 1160px;
 }
 
 .main-footer__socials-link{
