--- a/src/scss/formelements.scss
+++ b/src/scss/formelements.scss
@@ -103,3 +103,15 @@ hr{
 
     background: url("../img/avatar.png") -20px -10px no-repeat;
 }
+
+input[type="password"]{
+    width: 320px;
+    height: 44px;
+    border: 1px solid rgba(31, 32, 65, 0.25);
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    color: rgba(31, 32, 65, 0.25);
+}
