--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,7 @@
 @import "vars.scss";
 @import "cards.scss";
 @import "landingpage.scss";
+@import "registration.scss";
 
 
 body{
@@ -30,7 +31,6 @@ body{
 
 .footer__container{
     margin-bottom: 40px;
-    background-color: #fff;
 }
 
 .footer-creative__container{
