приделала поведение кнопок на странице регистрации

--- a/src/pug/registration.pug
+++ b/src/pug/registration.pug
@@ -7,7 +7,7 @@ html(lang="en")
         title Registration
     body
         include header-login.pug
-        .header__container
+        .header-registration__container
             img(src="img/image2.jpg") 
             .header__container-registration
                 include registrationcard.pug
