--- a/src/scss/registration.scss
+++ b/src/scss/registration.scss
@@ -1,4 +1,4 @@
-.header__container{
+.header-registration__container{
     position: relative;
 }
 
@@ -6,10 +6,12 @@
     position: absolute;
     top: 10px;
     left: 10px;
+    display: none;
 }
 
 .header__container-signin{
     position: absolute;
     top: 10px;
     right: 10px;
+    display: none;
 }
