добавила кнопке градиент

--- a/src/scss/button.scss
+++ b/src/scss/button.scss
@@ -1,5 +1,5 @@
 .button{
-    background-color: #BC9CFF;
+    background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
     color: #ffffff;
     padding: 15px 20px;
     border-radius: 22px;
