поправила второй хедер, изменила положение карточек в регистрации

--- a/src/pug/header-logged.pug
+++ b/src/pug/header-logged.pug
@@ -11,8 +11,4 @@ header.main-header
 				li.main-nav-list__item News
 				li.main-nav-list__item Documentation
 			
-			ul.main-login-list
-				li.main-login-list__item 
-					button.main-login-list__login.button login
-				li.main-login-list__item  
-					button.main-login-list__register.button register
+			p Cosmin Negoita
