сверстала страницу рум-детэйлс

--- a/src/pug/roomdetails.pug
+++ b/src/pug/roomdetails.pug
@@ -7,4 +7,55 @@ html(lang="en")
         title Room Details
     body   
         include header-login.pug
+        .room__container-photo
+            img(src="img/room1.jpg")
+            .room__container-photo-small
+                img(src="img/room2.jpg")
+                img(src="img/room3.jpg")
+
+        .room__container
+            h1 Сведения о номере
+            .formelements-comfort__smile
+                h4 Комфорт
+                p Шумопоглощающие стены
+            hr
+            .formelements-comfort__building
+                h4 Удобство
+                p Окно в каждой из спален
+            hr
+            .formelements-comfort__fire
+                h4 Уют
+                p Номер оснащён камином
+            hr
+            h1 Впечатления от номера
+            h1 Отзывы посетителей номера
+            .formelements-feedback__avatar
+                h4 Мурад Сарафанов 
+                p 5 дней назад 
+            p.
+                Великолепный матрас на кровати в основной 
+                спальне! А пуфик вообще потрясающий. 
+                И стены, действительно, шумоподавляющие. 
+                Выкрикивал комплименты повару — никто 
+                не жаловался из соседей.    
+            .formelements-feedback__avatar
+                h4 Патрисия Стёклышкова 
+                p Неделю назад 
+            p.
+                Обслуживание на высоте! Всё аккуратно, чисто. 
+                Завтраки в номер советую заказать, каждый 
+                день новое блюдо и десерт как комплимент
+            h1 Правила 
+            ul 
+                li Нельзя с питомцами
+                li Без вечеринок и мероприятий
+                li Время прибытия — после 13:00, а выезд до 12:00
+            h1 Отмена
+            p.
+                Бесплатная отмена в течение 48 ч. 
+                После этого при отмене не позднее 
+                чем за 5 дн. до прибытия вы получите 
+                полный возврат за вычетом сбора за услуги.
+            include bronecard.pug
         include footer.pug
+        
