добавила карточкам тени

--- a/src/pug/findnumbercard.pug
+++ b/src/pug/findnumbercard.pug
@@ -1,4 +1,4 @@
-.findnumber__container
+.findnumber__container.card
     h1 Найдём номера под ваши пожелания
     label Прибытие
     input(type="date")
