--- a/src/pug/registrationcard.pug
+++ b/src/pug/registrationcard.pug
@@ -1,4 +1,4 @@
-.registrationcard__container
+.registrationcard__container.card
     h1 Регистрация аккаунта
     input(type="text")
     input(type="text")
