--- a/src/scss/cards.scss
+++ b/src/scss/cards.scss
@@ -41,3 +41,8 @@
     height: 257px;
     background-color: #fff;
 }
+
+.card{
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+}
