--- a/src/scss/formelements.scss
+++ b/src/scss/formelements.scss
@@ -104,6 +104,20 @@ hr{
     background: url("../img/avatar.png") -20px -10px no-repeat;
 }
 
+.formelements-feedback__avatar2{
+    position: relative;
+    margin-left: 60px;
+}
+
+.formelements-feedback__avatar2::before{
+    position: absolute;
+    content: "";
+    width: 48px;
+    height: 48px;
+    left: -55px;
+
+    background: url("../img/avatar2.png") -20px -10px no-repeat;
+}
 input[type="password"]{
     width: 320px;
     height: 44px;
