--- a/src/scss/roomdetails.scss
+++ b/src/scss/roomdetails.scss
@@ -7,4 +7,10 @@
     background-color: #fff;
     padding: 70px 140px;
     width: 1160px;
+    display: flex;
+}
+
+.room__comtainer-left{
+    display: flex;
+    flex-wrap: wrap;
 }
