сверстала рум дитэилс до конца

--- a/src/pug/bronecard.pug
+++ b/src/pug/bronecard.pug
@@ -5,8 +5,11 @@
     label Отбытие
     input(type="date")
     label Гости
-    select
-        option 3 гостя
+        select
+            option Сколько гостей
+            option 1 гость
+            option 2 гостя
+            option 3 гостя
     table
         tr 
             td 9 990Р х 4 суток
