--- a/src/pug/roomdetails.pug
+++ b/src/pug/roomdetails.pug
@@ -14,7 +14,7 @@ html(lang="en")
                 img(src="img/room3.jpg")
 
         .room__container
-            .room__comtainer-left
+            .room__container-left
                 .room-info__container
                     h1 Сведения о номере
                     .formelements-comfort__smile
@@ -31,6 +31,11 @@ html(lang="en")
                     hr
                 .room-impression__container
                     h1 Впечатления от номера
+                    ul 
+                        li Великолепно
+                        li Хорошо
+                        li Удовлетворительно
+                        li Разочарован
                 .room-feedback__container
                     h1 Отзывы посетителей номера
                     .formelements-feedback__avatar
