--- a/src/pug/formelements.pug
+++ b/src/pug/formelements.pug
@@ -76,6 +76,9 @@ html(lang="en")
                 h3 Dropdown
                     select
                         option Сколько гостей
+                        option 1 гость
+                        option 2 гостя
+                        option 3 гостя
             .formelements-dropdown__container
                 h3 Dropdown
                     select
