предварительно сверстала сёрч рум

--- a/src/pug/searchroom.pug
+++ b/src/pug/searchroom.pug
@@ -7,4 +7,90 @@ html(lang="en")
         title Search Room
     body
         include header-login.pug
+        .searchroom__container
+            .searchroom__container-options
+                h3 Даты пребывания в отеле
+                input(type="date")
+                h3 Гости
+                select
+                    options 3 гостя, 1 младенец
+                h3 Диапазон цены
+                input(type="range")
+                h3 Checkbox buttons
+                input(type="checkbox")
+                label Можно курить
+                input(type="checkbox")
+                label Можно с питомцами
+                input(type="checkbox")
+                label Можно пригласить гостей (до 10 человек)
+                h3 Доступность
+                input(type="checkbox")
+                label Широкий коридор
+                input(type="checkbox")
+                label Помощник для инвалидов
+                h3 Удобства номера
+                select
+                    options 2 спальни, 2 кровати
+                h3 Дополнительные удобства 
+            .search-room__cards
+                .smallcard__container
+                    img(src="img/image1.png")
+                    p 888
+                    p 9 990р в сутки
+                    p 145 Отзывов
+                .smallcard__container
+                    img(src="img/image1.png")
+                    p 888
+                    p 9 990р в сутки
+                    p 145 Отзывов
+                .smallcard__container
+                    img(src="img/image1.png")
+                    p 888
+                    p 9 990р в сутки
+                    p 145 Отзывов
+                .smallcard__container
+                    img(src="img/image1.png")
+                    p 888
+                    p 9 990р в сутки
+                    p 145 Отзывов
+                .smallcard__container
+                    img(src="img/image1.png")
+                    p 888
+                    p 9 990р в сутки
+                    p 145 Отзывов
+                .smallcard__container
+                    img(src="img/image1.png")
+                    p 888
+                    p 9 990р в сутки
+                    p 145 Отзывов
+                .smallcard__container
+                    img(src="img/image1.png")
+                    p 888
+                    p 9 990р в сутки
+                    p 145 Отзывов
+                .smallcard__container
+                    img(src="img/image1.png")
+                    p 888
+                    p 9 990р в сутки
+                    p 145 Отзывов
+                .smallcard__container
+                    img(src="img/image1.png")
+                    p 888
+                    p 9 990р в сутки
+                    p 145 Отзывов
+                .smallcard__container
+                    img(src="img/image1.png")
+                    p 888
+                    p 9 990р в сутки
+                    p 145 Отзывов
+                .smallcard__container
+                    img(src="img/image1.png")
+                    p 888
+                    p 9 990р в сутки
+                    p 145 Отзывов
+                .smallcard__container
+                    img(src="img/image1.png")
+                    p 888
+                    p 9 990р в сутки
+                    p 145 Отзывов
         include footer.pug
