--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,6 +10,7 @@
 @import "landingpage.scss";
 @import "registration.scss";
 @import "roomdetails.scss";
+@import "searchroom.scss";
 
 
 body{
@@ -28,6 +29,10 @@ body{
 .header__container{
     margin-bottom: 40px;
     
+}
+
+.main-header__container{
+    box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
 }
 
 .footer__container{
