добавила иконки соцсетей

--- a/src/pug/footer-creative.pug
+++ b/src/pug/footer-creative.pug
@@ -6,8 +6,8 @@
         pellentesque aliquam curabitur cociis.
     ul.main-footer-creative__socials-list
         li.main-footer-creative__socials-item 
-            a.main-footer-creative__socials-link(href="#", alt="twitter") 
+            a.main-footer-creative__socials-link.tw(href="#", alt="twitter") 
         li.main-footer-creative__socials-item 
-            a.main-footer-creative__socials-link(href="#", alt="facebook") 
+            a.main-footer-creative__socials-link.fb(href="#", alt="facebook") 
         li.main-footer-creative__socials-item 
-            a.main-footer-creative__socials-link(href="#", alt="instagram") 
+            a.main-footer-creative__socials-link.ig(href="#", alt="instagram") 
