--- a/src/pug/footer.pug
+++ b/src/pug/footer.pug
@@ -35,9 +35,9 @@
     .main-footer__copyright-container
         p.main-footer__copyright-text Copyright © 2018 Toxin UI Kit. All rights reserved.
         ul.main-footer__socials-list
-            li.main-footer__socials-item 
-                a.main-footer__socials-link(href="#", alt="twitter") 
-            li.main-footer__socials-item 
-                a.main-footer__socials-link(href="#", alt="facebook") 
-            li.main-footer__socials-item 
-                a.main-footer__socials-link(href="#", alt="instagram") 
+            li.main-footer__socials-item
+                a.main-footer__socials-link.tw(href="#", alt="twitter") 
+            li.main-footer__socials-ite
+                a.main-footer__socials-link.fb(href="#", alt="facebook") 
+            li.main-footer__socials-item
+                a.main-footer__socials-link.ig(href="#", alt="instagram") 
