поправила пару картинок

--- a/src/pug/footer-creative.pug
+++ b/src/pug/footer-creative.pug
@@ -1,5 +1,5 @@
 .main-footer-creative__container
-    img.main-footer-creative__logo(src="./img/logo.png" alt="toxin")
+    img.main-footer-creative__logo(src="../img/logo.png" alt="toxin")
     p.
         Lorem ipsum dolor sit amet consectetur 
         adipiscing elit aliquam eget nullam 
