пытаюсь понять почему не работает лого

--- a/src/pug/footer.pug
+++ b/src/pug/footer.pug
@@ -1,7 +1,7 @@
 .main-footer__container-big
     .main-footer__container
         .main-footer__about-us
-            img.main-footer-logo(src=("../img/logo.png"))
+            img.main-footer-logo(src=("img/logo.png"))
             p.main-footer__text.
                 Lorem ipsum dolor sit amet 
                 consectetur adipiscing elit 
