--- a/src/pug/header-logged.pug
+++ b/src/pug/header-logged.pug
@@ -1,6 +1,6 @@
 header.main-header
 	div.main-header__container
-		img.main-header-logo(src="../img/logo.png")
+		img.main-header-logo(src="img/logo.png")
 
 		nav.main-nav
 			ul.main-nav-list
